src/styles/global.css
/* Theme: https://github.com/catppuccin/catppuccin */

html {
    /*
        min-width: 100vh is not actually the entire screen on mobile because yes. fill-available works but is not really standard

        to solve, height: fill-available and min-height: fill-available are necessary on html and body respectively

        this works anywhere but in firefox. That's okay i guess, considering it's just a minor visual bug
        https://caniuse.com/mdn-css_properties_min-height_stretch
    */

    height: -webkit-fill-available;
    height: stretch;
    height: fill-available;
}

body {
    --background-color: white;
    --surface: #f6f6f7;
    --surface2: #f2f2f3;
    --color: black;
    --color-semi-trans: rgba(0, 0, 0, 0.3);

    --warning: #df8e1d;
    --accent: #dd7878;
    --accent-semi-trans: rgba(238, 190, 190, 0.6);

    --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.2);
    --box-shadow-stronger: 0 8px 15px rgba(0, 0, 0, 0.25),
        0 6px 6px rgba(0, 0, 0, 0.22);
    --box-shadow-transition: cubic-bezier(0.25, 0.8, 0.25, 1);

    --horizontal-margin: 20%;

    background-color: var(--background-color);
    color: var(--color);

    width: 100%;
    min-height: 100vh;
    min-height: -webkit-fill-available;
    min-height: stretch;
    min-height: fill-available;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

@media screen and (max-width: 800px) {
    body {
        --horizontal-margin: 5%;
    }
}

body.dark {
    --background-color: #202021;
    --surface: #1e1e1f;
    --surface2: #29292b;
    --color: #e5e5e5;
    --color-semi-trans: rgba(229, 229, 229, 0.4);
    --warning: #e5c890;
    --accent: #eebebe;
    --accent-semi-trans: rgba(238, 190, 190, 0.2);
    --accent-rgb: 238, 190, 190;
}

html {
    font-family: Inter, system-ui, sans-serif;
}

p {
    line-height: 1.75em;
    margin: 1rem 0;
}

@font-face {
    font-family: "Inter";
    src: url("/fonts/Inter.var-subset.woff2") format("woff2");
    font-weight: 100 900;
    font-display: swap;
    font-style: normal;
    font-named-instance: "Regular";
}

.non-bold {
    font-weight: 400;
}

/* used to change theme without performing color transitions */
.disable-transitions * {
    transition: none !important;
}

::selection {
    background-color: var(--color);
    color: var(--background-color);
}

.dark ::selection {
    background-color: var(--accent);
    color: var(--background-color);
}

img::selection {
    background-color: var(--color-semi-trans);
}

.dark img::selection {
    background-color: var(--accent-semi-trans);
}

